# PolyphonicTrackerVST

./: .aidigestignore  .gitignore  CMakeLists.txt  README.md  build.sh  build_emergency.sh  build_help.txt  build_proj.sh  capture_build.sh  codebase.md  codebase_production.md  tree.sh
build-mac-apple-silicon/: Makefile  juce_vst3_helper
build-mac-apple-silicon/PolyphonicTrackerVST_artefacts/JuceLibraryCode/: Info.txt
build-mac-apple-silicon/PolyphonicTrackerVST_artefacts/JuceLibraryCode/PolyphonicTrackerVST_VST3/: Info.plist
build-mac-apple-silicon/PolyphonicTrackerVST_artefacts/JuceLibraryCode/Release/: Defs.txt
build-mac-apple-silicon/libs/JUCE/: JUCEExportConfig.cmake  Makefile
build-mac-apple-silicon/libs/JUCE/modules/: Makefile
build-mac-apple-silicon/libs/JUCE/tools/: JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile
build-mac-apple-silicon/libs/JUCE/tools/modules/: Makefile
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: FFTProcessor.cpp  FFTProcessor.h  PitchDetector.cpp  PitchDetector.h
source/gui/: CustomPanel.h  SpectrogramComponent.cpp  SpectrogramComponent.h
source/midi/: MIDIManager.cpp  MIDIManager.h
tests/: CMakeLists.txt
